recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:9: error: not found: value lenght
    var length = lenght + increment
                 ^Spiral:8: error: recursive variable steps needs type
    var steps = steps - 1
                ^